<resources>
    <string name="app_name">TodoApp</string>

    <string name="nv_am_open">Open Menu</string>
    <string name="nv_am_close">Close Menu</string>

    <string name="item_nm_deleteAll">Delete All</string>
    <string name="item_nm_deleteCompleted">Delete Completed</string>
    <string name="item_nm_logOut">Log Out</string>

    <string name="et_fta_title_placeholder">Enter Title of the task*</string>
    <string name="et_fta_description_placeholder">Enter Description of the task</string>

    <string name="tv_fta_priority_placeholder">Select Priority of the task*</string>
    <string name="rb_fta_priority_high">High</string>
    <string name="rb_fta_priority_medium">Medium</string>
    <string name="rb_fta_priority_low">Low</string>

    <string name="cb_fta_isComplete">Task is complete?</string>


    <string name="btn_fta_addTodo">Add Task</string>
    <string name="btn_fta_cancelTodo">Cancel</string>

    <string name="alert_fta_cancel">Do you want to return to main screen?</string>
    <string name="btn_fta_alert_ok">OK</string>
    <string name="btn_fta_alert_cancel">Cancel</string>

    <string name="alert_am_deleteAll">Do you want to delete all todo tasks?</string>
    <string name="alert_am_deleteCompleted">Do you want to delete all completed todo tasks?</string>
    <string name="alert_am_logOut">Do you want to log out?</string>

    <string name="btn_am_delete_ok">Delete</string>
    <string name="btn_am_logOut_ok">Log Out</string>
    <string name="btn_am_delete_cancel">Cancel</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="tv_al_title">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="welcome">"Welcome !"</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="invalid_email">Wrong email</string>
    <string name="invalid_password">Wrong password</string>
    <string name="login_failed">"Login failed"</string>

</resources>